PHASE 1 & PHASE 2: Implemented lib & UT